--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,24 @@
 <h1>Simple Secret Santa!</h1>
+
+<form action="/games" method="POST">
+
+  <p>
+    <label for="person_1">Person 1</label>
+    <input type="text" id="person_1" name="person_1" />
+  </p>
+
+  <p>
+    <label for="person_2">Person 2</label>
+    <input type="text" id="person_2" name="person_2" />
+  </p>
+
+  <p>
+    <label for="person_3">Person 3</label>
+    <input type="text" id="person_3" name="person_3" />
+  </p>
+
+  <p>
+    <input type="submit" value="Start" />
+  </p>
+
+</form>
