--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,12 @@
   </p>
 
   <p>
+  <label for="person_4">Person 4</label>
+  <input type="text" id="person_4" name="person_4" />
+</p>
+
+
+  <p>
     <input type="submit" value="Start" />
   </p>
 
