--- a/app/views/reveals/show.html.erb
+++ b/app/views/reveals/show.html.erb
@@ -2,7 +2,7 @@
 
   <h1><%= @player.name %>, the elves have chosen...</h1>
 
-  <h2>You need to buy a present for <%= @player.recipient.name %>!</h2>
+  <h2>You need to buy a present for <strong><%= @player.recipient.name %></strong>!</h2>
 
   <p>Make sure you remember this! We will not tell you again...</p>
 
