--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -8,6 +8,10 @@
     <p>
       Share <a href="<%= request.url %>" class="url">this URL</a> with everyone and ask them to click one of the links below:
     </p>
+  <% else %>
+    <p>
+      Who are you? Click the link below!
+    </p>
   <% end %>
 
   <ul>
